--- a/app/src/main/res/layout/activity_okhttplist.xml
+++ b/app/src/main/res/layout/activity_okhttplist.xml
@@ -15,12 +15,12 @@
         android:layout_centerInParent="true" />
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/tv_nodata"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="没有数据..."
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:visibility="gone" />
 
 </RelativeLayout>
